--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,149 @@
-/* место для вашего кода */
+
+/* HEADER */
+
+.header {
+    display: grid;
+    /*размер минимального содержимого будет по центру т.к. фракции забирают себе одинковое количество свободного места*/
+    grid-template-columns: 1.5fr min-content 1.5fr; 
+    align-items: center;
+    padding: 94px 51px 94px 52px;
+}
+
+.header__menu-list {
+    display: flex;
+    gap: 32px;
+}
+
+.header__menu-item {
+    list-style: circle;
+}
+
+.header__menu-item-no-bullit {
+    list-style: none;
+}
+
+.header__menu-link {
+    color: #000;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21.13px;
+    text-underline-position: under;
+}
+
+.header__menu-link-active {
+    text-decoration: none;
+}
+
+.header__logo {
+    display: block;
+    width: 148px; 
+    height: 105px;
+}
+
+.header__logo-image {
+    width: 100%;
+    height: 100%;
+}
+
+
+.address {
+    display: flex;
+    flex-direction: column;
+    color: #000;
+    font-size: 18px;
+    font-style: normal;
+    line-height: 1.3;
+    text-underline-position: under;
+}
+
+.header__address {
+    justify-self: end;
+}
+
+/* COVER */
+
+.cover {
+    position: relative;
+    padding: 165px 50px 50px;
+    background-image: url(/images/cover.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 60%;
+    background-color: #000;
+}
+
+.cover__title {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 100px;
+    line-height: 1.15;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+}
+
+.aligned-text {
+    display: block;
+}
+
+.aligned-text_center {
+    text-align: center;
+}
+
+.aligned-text_right {
+    text-align: right;
+}
+
+.cover__description {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 135px 0 0;
+}
+
+.cover__description-text {
+    color: #fff;
+    font-weight: normal;
+    font-size: 22px;
+    text-transform: uppercase;
+    word-spacing: 20px;
+}
+
+.bet-button {
+    border: 1px #fff solid;
+    color: #fff;
+    font-family: Raleway, sans-serif;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 25.83px;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: transparent;
+    padding: 12px 31px;
+}
+
+.lots {
+    padding: 0 24px 146px;
+}
+
+.about {
+    padding: 0 24px 178px;
+}
+
+.footer {
+    padding: 0 50px 91px;
+}
