--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,10 @@
 
 .cover {
     position: relative;
-    padding: 165px 50px 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 132px;
+    min-height: 757px;
     background-image: url(/images/cover.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -74,7 +77,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
     width: 100%;
     height: 100%;
     opacity: 60%;
@@ -86,17 +88,22 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
+    padding: 173px 50px 0;
     color: #fff;
     font-weight: bold;
     font-size: 100px;
-    line-height: 1.15;
+    line-height: 100px;
     letter-spacing: 30px;
     text-transform: uppercase;
 }
 
 .aligned-text {
     display: block;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 60px;
 }
 
 .aligned-text_center {
@@ -107,12 +114,17 @@
     text-align: right;
 }
 
+.no-letter-spacing {
+    letter-spacing: normal;
+}
+
 .cover__description {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    padding: 135px 0 0;
+    gap: 78px;
+    padding: 0 50px 50px;
 }
 
 .cover__description-text {
@@ -120,11 +132,12 @@
     font-weight: normal;
     font-size: 22px;
     text-transform: uppercase;
-    word-spacing: 20px;
+    word-spacing: 18px;
 }
 
 .bet-button {
     border: 1px #fff solid;
+    padding: 12px 31px;
     color: #fff;
     font-family: Raleway, sans-serif;
     font-weight: normal;
@@ -133,11 +146,90 @@
     text-align: center;
     text-transform: uppercase;
     background-color: transparent;
-    padding: 12px 31px;
 }
 
+/* LOTS */
+
 .lots {
-    padding: 0 24px 146px;
+    padding: 179px 24px 146px;
+}
+
+.lots__heading {
+    margin-left: 40px;
+    font-weight: bold;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.lots__card-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 25px;
+    margin: 27px 0px 30px 0;
+    list-style: none;
+}
+
+.lots__card-list-item {
+    flex-grow: 1;
+    width: 334px;
+    min-height: 563px;
+}
+
+.card-link {
+    display: block;
+    height: 100%;
+    text-decoration: none;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 48px 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.card_type_film {
+    background-image: url(/images/card-lot-01.jpg);
+}
+
+.card_type_book {
+    background-image: url(/images/card-lot-02.jpg);
+    background-position: center bottom;
+}
+
+.card_type_picture {
+    background-image: url(/images/card-lot-03.jpg);
+}
+
+.card__title {
+    z-index: 1;
+    color: #fff;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 26.4px;
+    text-decoration: underline;
+    text-transform: uppercase;
+}
+
+.card__text {
+    z-index: 1;
+    color: #fff;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.lots__look-more-link {
+    font-size: 20px;
+    line-height: 23.48px;
+    margin-left: 40px;
+    text-underline-position: under;
 }
 
 .about {
