--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,6 @@
     color: #000;
     font-weight: normal;
     font-size: 18px;
-    line-height: 21.13px;
     text-underline-position: under;
 }
 
@@ -93,7 +92,7 @@
     color: #fff;
     font-weight: bold;
     font-size: 100px;
-    line-height: 100px;
+    line-height: 1;
     letter-spacing: 30px;
     text-transform: uppercase;
 }
@@ -142,7 +141,6 @@
     font-family: Raleway, sans-serif;
     font-weight: normal;
     font-size: 22px;
-    line-height: 25.83px;
     text-align: center;
     text-transform: uppercase;
     background-color: transparent;
@@ -151,7 +149,7 @@
 /* LOTS */
 
 .lots {
-    padding: 179px 24px 146px;
+    padding: 179px 24px 148px;
 }
 
 .lots__heading {
@@ -213,29 +211,115 @@
     color: #fff;
     font-weight: bold;
     font-size: 22px;
-    line-height: 26.4px;
     text-decoration: underline;
     text-transform: uppercase;
+    text-underline-position: under;
 }
 
 .card__text {
     z-index: 1;
     color: #fff;
     font-size: 20px;
-    line-height: 24px;
 }
 
 .lots__look-more-link {
-    font-size: 20px;
-    line-height: 23.48px;
     margin-left: 40px;
+    font-size: 20px;
     text-underline-position: under;
 }
 
+/* ABOUT */
+
 .about {
+    min-height: 595px;
     padding: 0 24px 178px;
 }
 
+.about__column {
+    display: grid;
+    grid-template-columns: 334px 1fr;
+    grid-column-gap: 25px;
+    grid-row-gap: 101px;
+    justify-items: center;
+}
+
+.about__logo {
+    display: flex;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    justify-content: center;
+    align-items: center;
+    width: 240px;
+    height: 240px;
+    margin: 34px 0 0;
+    border-radius: 240px;
+    background-color: #000;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__title {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    justify-self: start;
+    margin: 133px 0 0;
+    font-weight: bold;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.about__text {
+    display: flex;
+    flex-direction: column;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    gap: 26px;
+    font-weight: normal;
+    font-size: 20px;
+}
+
+/* FOOTER */
+
 .footer {
+    display: flex;
+    justify-content: space-between;
     padding: 0 50px 91px;
+}
+
+.footer__address {
+    justify-self: start;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer__menu-item {
+    list-style: none;
+}
+
+.footer__menu-link {
+    color: #000;
+    font-weight: normal;
+    font-size: 18px;
+    text-underline-position: under;
+}
+
+.footer__menu-link-active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    display: flex;
+    gap: 48px;
+}
+
+.footer__social-list-item {
+    width: 48px;
+    list-style: none;
 }
