Улучшено currentColor для кнопки, так же добавлен hover для кнопки, исправленны ошибки после код ревью. удалены повторые позиции для карточек, убрана ограниченная высота блока для about, изменен border radius у белого логотипа

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@
     flex-direction: column;
     gap: 132px;
     min-height: 757px;
-    background-image: url(/images/cover.jpg);
+    background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -135,7 +135,7 @@
 }
 
 .bet-button {
-    border: 1px #fff solid;
+    border: 1px currentColor solid;
     padding: 12px 31px;
     color: #fff;
     font-family: Raleway, sans-serif;
@@ -144,6 +144,11 @@
     text-align: center;
     text-transform: uppercase;
     background-color: transparent;
+}
+
+.bet-button:hover {
+    border: 1px currentColor solid;
+    color: #ff0000;
 }
 
 /* LOTS */
@@ -194,16 +199,15 @@
 }
 
 .card_type_film {
-    background-image: url(/images/card-lot-01.jpg);
+    background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-    background-image: url(/images/card-lot-02.jpg);
-    background-position: center bottom;
+    background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-    background-image: url(/images/card-lot-03.jpg);
+    background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
@@ -231,7 +235,6 @@
 /* ABOUT */
 
 .about {
-    min-height: 595px;
     padding: 0 24px 178px;
 }
 
@@ -252,7 +255,7 @@
     width: 240px;
     height: 240px;
     margin: 34px 0 0;
-    border-radius: 240px;
+    border-radius: 50%;
     background-color: #000;
 }
 
